# TemplatesAndBoilerplates

./: README.md
CheckIP/: README.md
CheckIP/GO/: main.go
CheckIP/Rust/: Cargo.toml
CheckIP/Rust/src/: main.rs
CheckIfWebsitesAreAlive/: index.html  package-lock.json  package.json
CheckIfWebsitesAreAlive/src/: App.jsx
Springboot_LoginRegisterPublicPrivatePage/: build.gradle  myapp_auth_schema.sql
Springboot_LoginRegisterPublicPrivatePage/src/main/java/platform/: PlatformApplication.java
Springboot_LoginRegisterPublicPrivatePage/src/main/java/platform/audit/: LoginAttemptLogger.java
Springboot_LoginRegisterPublicPrivatePage/src/main/java/platform/domain/: AppRole.java  AppUser.java  UserRole.java
Springboot_LoginRegisterPublicPrivatePage/src/main/java/platform/dto/: RegisterForm.java
Springboot_LoginRegisterPublicPrivatePage/src/main/java/platform/logging/: RequestLoggingInterceptor.java
Springboot_LoginRegisterPublicPrivatePage/src/main/java/platform/repo/: AuthSessionRepository.java
Springboot_LoginRegisterPublicPrivatePage/src/main/java/platform/security/: DbUserDetailsService.java  SecurityConfig.java  SessionHandlers.java
Springboot_LoginRegisterPublicPrivatePage/src/main/resources/: application.properties
Springboot_LoginRegisterPublicPrivatePage/src/main/resources/static/css/: main.css
Springboot_LoginRegisterPublicPrivatePage/src/main/resources/templates/: register.html
platform/src/main/java/platform/audit/: AuthEventListener.java
platform/src/main/resources/templates/: login.html
(+7 files in other folders)
